RESOLVED FIXED119923
RenderNamedFlowThread should not create NodeRenderingContext objects
https://bugs.webkit.org/show_bug.cgi?id=119923
Summary RenderNamedFlowThread should not create NodeRenderingContext objects
Ryosuke Niwa
Reported 2013-08-16 20:02:38 PDT
Consider merging https://chromium.googlesource.com/chromium/blink/+/949d7d7e7b8685454742a55cf0ca912bb9a7b177 RenderNamedFlowThread is using NodeRenderingContext to get the original parent renderer, but should just be using NodeRenderingTraversal::parent instead (which is what NodeRenderingContext does internally anyway).
Attachments
Patch (2.67 KB, patch)
2013-08-22 05:10 PDT, Andrei Bucur
no flags
Patch (2.60 KB, patch)
2013-08-22 06:16 PDT, Andrei Bucur
no flags
Patch (2.77 KB, patch)
2013-08-22 07:07 PDT, Andrei Bucur
no flags
Andrei Bucur
Comment 1 2013-08-22 05:10:10 PDT
Build Bot
Comment 2 2013-08-22 05:14:23 PDT
Antti Koivisto
Comment 3 2013-08-22 05:14:58 PDT
Comment on attachment 209350 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=209350&action=review > Source/WebCore/rendering/RenderNamedFlowThread.cpp:486 > + NodeRenderingTraversal::ParentDetails parentDetails; I killed ParentDetails so this is not going to work. The equivalent code is likely to be simple though.
Antti Koivisto
Comment 4 2013-08-22 05:16:52 PDT
Or you can just leave this to be for now. I'm going to remove NodeRenderingContext.
Andrei Bucur
Comment 5 2013-08-22 06:16:03 PDT
Early Warning System Bot
Comment 6 2013-08-22 06:29:23 PDT
EFL EWS Bot
Comment 7 2013-08-22 06:34:34 PDT
Early Warning System Bot
Comment 8 2013-08-22 06:34:43 PDT
kov's GTK+ EWS bot
Comment 9 2013-08-22 06:41:29 PDT
Build Bot
Comment 10 2013-08-22 06:45:29 PDT
EFL EWS Bot
Comment 11 2013-08-22 06:52:22 PDT
Build Bot
Comment 12 2013-08-22 06:58:35 PDT
Andrei Bucur
Comment 13 2013-08-22 07:07:50 PDT
Antti Koivisto
Comment 14 2013-08-22 08:01:16 PDT
Comment on attachment 209362 [details] Patch r=me
WebKit Commit Bot
Comment 15 2013-08-22 08:27:30 PDT
Comment on attachment 209362 [details] Patch Clearing flags on attachment: 209362 Committed r154447: <http://trac.webkit.org/changeset/154447>
WebKit Commit Bot
Comment 16 2013-08-22 08:27:34 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.