RenderNamedFlowThread should not create NodeRenderingContext objects https://bugs.webkit.org/show_bug.cgi?id=119923

Reviewed by Antti Koivisto.

Port of https://chromium.googlesource.com/chromium/blink/+/949d7d7e7b8685454742a55cf0ca912bb9a7b177.
Original patch by Elliott Sprehn.

RenderNamedFlowThread should not create NodeRenderingContext objects

RenderNamedFlowThread is using NodeRenderingContext to get the original
parent renderer, but should just be using NodeRenderingTraversal::parent
instead (which is what NodeRenderingContext does internally anyway).

Tests: No change in functionality. No new tests.

* rendering/RenderNamedFlowThread.cpp:
(WebCore::RenderNamedFlowThread::isChildAllowed):


Canonical link: https://commits.webkit.org/138108@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@154447 268f45cc-cd09-0410-ab3c-d52691b4dbfc